samples/_failures_safe/1761520851_37799a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81d2eb64.c: In function ‘main’:
./samples/SAFE/__tmp_81d2eb64.c:169:5: error: expected declaration or statement at end of input
  169 |     int k = 0;
      |     ^~~
